test/good/bool.lat
int main () {
  if (true) {
    printInt(1);
  }
  if (false) {
    printInt(0);
  }
  if (true) {
    printInt(2);
  } else {
    printInt(0);
  }
  if (false) {
    printInt(0);
  } else {
    printInt(3);
  }

  if (false && false) {
    printInt(0);
  }
  if (false && true) {
    printInt(0);
  }
  if (true && false) {
    printInt(0);
  }
  if (true && true) {
    printInt(4);
  }

  if (false || false) {
    printInt(0);
  }
  if (false || true) {
    printInt(5);
  }
  if (true || false) {
    printInt(6);
  }
  if (true || true) {
    printInt(7);
  }
  if (true == true) {
    printInt(8);
  }
  return 0;
}
