test/bad/new_arr.lat
int main() {
    int[] a;
    a = new string[10];
    return 0;
}
